simpler-ish rpython installation
At least we don't need a user to compensate for AUR restrictions, and
we'll also get an up to date version now as aur pin of rpython is pretty
old anyway.

We install from source tarball at latest pypy2 version (5.8.0 atm).
Note that this needs `make` to run, and will just crash silently if you don't have
it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
 before_script:
 - docker build -t clux/magic-forest .
 script:
-- docker run -u0 --rm -v $PWD:/volume -w /volume -t clux/magic-forest ./bench.sh
-- docker run -u0 --rm -v $PWD:/volume -w /volume -t clux/magic-forest ./test.sh
+- docker run --rm -v $PWD:/volume -w /volume -t clux/magic-forest ./bench.sh
+- docker run --rm -v $PWD:/volume -w /volume -t clux/magic-forest ./test.sh
 notifications:
   email:
     on_success: change
